<?xml version="1.0"?>
<package>
  <name>odometry_4dradar</name>
  <version>0.0.0</version>

  <description>
    study of 4dradar
  </description>

  <maintainer email="invokermyself@163.com">invoker</maintainer>

  <license>BSD</license>

  <author email="invokermyself@163.com">He Zihang</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>radar_ego_velocity_estimator</run_depend>

  <export>
  </export>
</package>
